Changed delete a business button to open a confirmation modal window to prevent accidental deletion. Removed search bar backend error validation to allow users to get to a page saying the result wasn't found if a business that matched what they were searching for could not be found. Fixed bug where price range button was submitting the search on click. Made demo login link automatically log in demo user. Adjusted CSS for sign up and log in buttons so that they are consistent and aligned.

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -10,11 +10,12 @@ body {
    
 }
 
-.sign-up-button {
+.sign-up-button,
+.login-link {
     background-color: #d32323;
     color: white;
 
-    padding: .25rem;
+    padding: .25rem .5rem;
     font-size: 1.2rem;
  
 
@@ -32,9 +33,12 @@ body {
     border: solid 1px #d32323;
 }
 
-.login-link {
-    margin-right: 10px;
+.login-signup-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
+
 .price-list{
     list-style: none;
     display: flex;
